# cmake-example

./: .gitattributes  .gitignore  README.md  clang-cmakeinit.cmake  gcc-cmakeinit.cmake
src/: .clang_complete  CMakeLists.txt  test.cpp
